--- a/functions/package.json
+++ b/functions/package.json
@@ -8,11 +8,15 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "8"
+  },
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
     "child-process-promise": "^2.2.1",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
+    "firebase-tools": "^6.7.1",
     "os": "^0.1.1",
     "path": "^0.12.7"
   },
